--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.3",
     "express": "~4.15.5",
     "jade": "~1.11.0",
+    "mongodb": "^3.0.1",
     "serve-favicon": "~2.4.5",
     "winston": "^2.4.0"
   }
