--- a/docker-stack.yaml
+++ b/docker-stack.yaml
@@ -1,27 +1,33 @@
 version: '3.4'
 services:
-   proxy:
-     image: traefik:1.5.0
-     configs:
-     - source: traefik
-       target: /etc/traefik/traefik.toml
-     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-     deploy:
-       restart_policy:
-         condition: on-failure
-   www:
-     image: lucj/sophia.events
-     deploy:
-       labels:
-       - "traefik.enable=true"
-       - "traefik.frontend.rule=Host:sophia.events"
-       - "traefik.frontend.entryPoints=http,https"
-       - "traefik.port=80"
-       - "traefik.web.frontend.rule=Host:sophia.events"
-       - "traefik.web.port=80"
-       restart_policy:
-         condition: on-failure
+  proxy:
+    image: traefik:1.5.0
+    configs:
+    - source: traefik
+      target: /etc/traefik/traefik.toml
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock:ro
+    ports:
+    - 80:80
+    - 443:443
+    - 8080:8080
+    deploy:
+      replicas: 1
+      labels:
+      - "traefik.enable=true"
+      placement:
+        constraints: [node.role == manager]
+      restart_policy:
+        condition: on-failure
+  www:
+    image: lucj/sophia.events
+    deploy:
+      labels:
+      - "traefik.enable=true"
+      - "traefik.frontend.rule=Host:sophia.events"
+      - "traefik.port=80"
+      restart_policy:
+        condition: on-failure
 configs:
   traefik:
     file: ./tls/traefik.toml
