--- a/www/Dockerfile
+++ b/www/Dockerfile
@@ -2,8 +2,12 @@ FROM mhart/alpine-node:8.9.4 as build
 RUN npm install -g mustache
 COPY . /build
 WORKDIR /build
-RUN mustache events.json index.mustache > index.html
+RUN node clean_events.js
+RUN mustache upcoming_events.json index.mustache > index.html
+RUN mustache past_events.json index.mustache > past.html
 
 FROM nginx:1.12.2
-COPY . /usr/share/nginx/html
-COPY --from=build /build/index.html /usr/share/nginx/html/index.html
+COPY --from=build /build/*.html /usr/share/nginx/html/
+COPY css /usr/share/nginx/html/css
+COPY js /usr/share/nginx/html/js
+COPY images /usr/share/nginx/html/images
