--- a/www/Dockerfile
+++ b/www/Dockerfile
@@ -1,7 +1,7 @@
 FROM mhart/alpine-node:8.9.4 as build
-RUN npm install -g mustache
 COPY . /build
 WORKDIR /build
+RUN npm i -g mustache && npm i
 RUN node clean_events.js
 RUN mustache upcoming_events.json index.mustache > index.html
 RUN mustache past_events.json index.mustache > past.html
