--- a/docker-stack-http.yml
+++ b/docker-stack-http.yml
@@ -9,7 +9,6 @@ services:
     - /var/run/docker.sock:/var/run/docker.sock:ro
     ports:
     - 80:80
-    - 8080:8080
     deploy:
       replicas: 1
       placement:
@@ -20,9 +19,9 @@ services:
     image: lucj/sophia.events
     deploy:
       labels:
-      - "traefik.enable=true"
-      - "traefik.port=80"
+      - "traefik.backend=www"
       - "traefik.frontend.rule=Host:sophia.events"
+      - "traefik.port=80"
       - "traefik.frontend.entryPoints=http"
       - "traefik.frontend.headers.browserXSSFilter=true"
       - "traefik.frontend.headers.frameDeny=true"
