Enable www in Traefik

--- a/docker-stack-http.yml
+++ b/docker-stack-http.yml
@@ -19,7 +19,7 @@ services:
     image: lucj/sophia.events
     deploy:
       labels:
-      - "traefik.backend=www"
+      - "traefik.enable=true"
       - "traefik.frontend.rule=Host:sophia.events"
       - "traefik.port=80"
       - "traefik.frontend.entryPoints=http"
