--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -18,9 +18,9 @@ http {
         server www;
     }
 
-    add_header X-Content-Type-Options: nosniff;
-    add_header X-Frame-Options: DENY;
-    add_header X-XSS-Protection: "1; mode=block";
+    add_header X-Content-Type-Options nosniff;
+    add_header X-Frame-Options DENY;
+    add_header X-XSS-Protection "1; mode=block";
 
     server {
         listen                    80;
