New layout + simplication of the whole thing

--- a/www/Dockerfile
+++ b/www/Dockerfile
@@ -3,12 +3,11 @@ COPY . /build
 WORKDIR /build
 RUN npm i -g mustache && npm i
 RUN node clean_events.js
-RUN mustache upcoming_events.json index.mustache > index.html
-RUN mustache past_events.json index.mustache > past.html
+RUN mustache events.json index.mustache > index.html
 
 FROM nginx:1.12.2
 COPY --from=build /build/*.html /usr/share/nginx/html/
 COPY events.json /usr/share/nginx/html/
 COPY css /usr/share/nginx/html/css
 COPY js /usr/share/nginx/html/js
-COPY images /usr/share/nginx/html/images
+COPY img /usr/share/nginx/html/img
